--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -75,11 +75,12 @@
                 android:id="@+id/twodots"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=":  "
+                android:text=":"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-             app:layout_constraintRight_toLeftOf="@id/price"
+                app:layout_constraintRight_toLeftOf="@id/price"
                 android:textStyle="bold"
+                android:layout_marginEnd="@dimen/_25sdp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_15sdp"
                 />
