--- a/app/src/main/res/layout/fragment_history_.xml
+++ b/app/src/main/res/layout/fragment_history_.xml
@@ -13,6 +13,7 @@
         android:text="Order History"
         android:textColor="@color/black"
         android:textSize="@dimen/_23sdp"
+        android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_20sdp"/>
 
