--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -4,17 +4,20 @@
     <item
         android:id="@+id/home_nav"
         android:icon="@drawable/home_icon"
+        xmlns:tools="@layout/fragment_home"
         android:title="Home"/>
 
 
     <item
         android:id="@+id/cart_nav"
         android:icon="@drawable/cart_icon"
+        xmlns:tools="@layout/fragment_cart"
         android:title="Cart"/>
 
     <item
         android:id="@+id/history_nav"
         android:icon="@drawable/history_icon"
+        xmlns:tools="@layout/fragment_history"
         android:title="Hostory"/>
 
 
@@ -22,6 +25,7 @@
     <item
         android:id="@+id/profile_nav"
         android:icon="@drawable/profile_icon"
+        xmlns:tools="@layout/fragment_profile"
         android:title="Profile"/>
 
 </menu>
